[package]
name = "kaissa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kaissa_lib"
path = "src/lib.rs"

[[bin]]
name = "kaissa"
path = "src/main.rs"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
candle = { git = "https://github.com/huggingface/candle.git", package = "candle-core", version = "0.3.3", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-onnx = { git = "https://github.com/huggingface/candle.git", version = "0.3.3", optional = true }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.3.3", optional = true }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"], optional = true }
cudarc = { version = "0.10.0", features = ["f16"] }
clap = { version = "4.2.4", features = ["derive"] }
anyhow = { version = "1", features = ["backtrace"] }
hf-hub = "0.3.0"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
tokenizers = { version = "0.15.0", default-features = false, features = [ "onig" ] }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.23.0", default-features = false }
serde = { version = "1.0.171", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0.99"

[build-dependencies]
bindgen_cuda = { version = "0.1.1", optional = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]
cudnn = ["candle/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = ["dep:intel-mkl-src", "candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
nccl = ["cuda", "cudarc/nccl", "dep:half"]
onnx = ["candle-onnx"]
metal = ["candle/metal", "candle-nn/metal"]
